external-crates/move/crates/move-compiler/tests/move_2024/naming/index_fun_invalid_visibility.exp
error[E02016]: invalid visibility modifier
  ┌─ tests/move_2024/naming/index_fun_invalid_visibility.move:5:7
  │
5 │     #[syntax(index)]
  │       ^^^^^^^^^^^^^ Syntax attributes may only appear on public functions
6 │     public(package) fun index_a(a: &A): &A { a }
  │                         ------- This function is not public

error[E01002]: unexpected token
   ┌─ tests/move_2024/naming/index_fun_invalid_visibility.move:11:12
   │
11 │     friend fun index_b(b: &B): &B { b }
   │            ^^^
   │            │
   │            Unexpected 'fun'
   │            Expected a friend declaration

error[E02016]: invalid visibility modifier
   ┌─ tests/move_2024/naming/index_fun_invalid_visibility.move:15:7
   │
15 │     #[syntax(index)]
   │       ^^^^^^^^^^^^^ Syntax attributes may only appear on public functions
16 │     fun index_c(c: &C): &C { c }
   │         ------- This function is not public

